# ReactAgent_LangGraph

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
frontend/: package.json  vite.config.ts
frontend/src/components/: ChatWindow.tsx  CostTracker.tsx  MessageBubble.tsx  RoutingBadge.tsx  ToolCallCard.tsx
frontend/src/hooks/: useAgentWebSocket.ts
frontend/src/services/: api.ts
langgraph-agent/: .env.example  budget.py  config.py  graph.py  graph_diagram.html  llm_selector.py  main.py  pyproject.toml  requirements.txt  server.py  state.py
langgraph-agent/prompts/: registry.py
langgraph-agent/skills/: __init__.py  action_executor.py  answer_with_citations.py  compliance_check.py  retrieval.py  router.py  summarizer.py
langgraph-agent/tools/: __init__.py  calculator.py  cpq_rules.py  jira_ticket.py  salesforce_lookup.py  search_docs.py
nestjs-backend/: Dockerfile  package-lock.json  package.json
nestjs-backend/src/: app.module.ts
nestjs-backend/src/agent/: agent.controller.ts  agent.gateway.ts  agent.module.ts  agent.service.ts
nestjs-backend/src/audit/: audit.interceptor.ts  audit.module.ts  audit.service.ts
nestjs-backend/src/auth/: auth.service.ts  jwt.strategy.ts  roles.decorator.ts  roles.guard.ts
nestjs-backend/src/budget/: budget.guard.ts  budget.interceptor.ts  budget.module.ts  budget.service.ts
nestjs-backend/src/model-policy/: model-policy.module.ts  model-policy.service.ts
nestjs-backend/src/prompts/: prompts.controller.ts  prompts.module.ts  prompts.service.ts
(+22 files in other folders)
