[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.129.2",
    "httpx>=0.28.1",
    "jira>=3.10.5",
    "langchain>=1.2.10",
    "langchain-core>=1.2.14",
    "langchain-openai>=1.1.10",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.0.9",
    "pinecone-client>=6.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "simple-salesforce>=1.12.9",
    "slack-sdk>=3.40.1",
    "uvicorn>=0.41.0",
]
